--- a/nuxt/app/assets/css/base/typography.css
+++ b/nuxt/app/assets/css/base/typography.css
@@ -4,15 +4,15 @@
   }
 
   h1 {
-    @apply mb-4 text-4xl font-bold;
+    @apply mb-4 text-4xl;
   }
 
   h2 {
-    @apply mb-3 text-3xl font-bold;
+    @apply mb-3 text-3xl;
   }
 
   h3 {
-    @apply mb-2 text-2xl font-bold;
+    @apply mb-2 text-2xl;
   }
 
   p {
